--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -2,5 +2,7 @@ $inputBorder: 4px solid #ced4da;
 
 :root {
   --border-radius: 1rem;
-  --primary-color: #6070AB;
+  --primary-color: #7A9ADE;
+  --primary-semi-dark-color: #6070AB;
+  --primary-dark-color: #2B3F61;
 }
