--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -3,6 +3,7 @@ $inputBorder: 4px solid #ced4da;
 :root {
   --border-radius: 1rem;
   --primary-color: #7A9ADE;
+  --primary-light-color: rgba(139, 162, 247, 0.24);
   --primary-semi-dark-color: #6070AB;
   --primary-dark-color: #2B3F61;
 }
